...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/itemPrompt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{isNewItem ? @string/new_item : @string/edit_item}"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            tools:text="@string/new_item" />
...
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="2">

                        <ImageButton
                            android:id="@+id/item_take_picture"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_weight="2"
                            android:contentDescription="@string/item_image_description"
                            android:src="@android:drawable/ic_menu_camera"
                            android:translationZ="1dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/item_image"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/item_open_gallery"
                            android:layout_width="64dp"
...
                    android:id="@+id/itemTitleContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={title}" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    app:suffixText="CHF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={price}" />

                </com.google.android.material.textfield.TextInputLayout>
...

                    <Space
                        android:layout_width="30dp"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/category_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/themeColor"
                        android:entries="@array/categories" />

                </LinearLayout>
...
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:text="@={quantity}" />

...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/autocomplete_fragment"
                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    </androidx.fragment.app.FragmentContainerView>

                    <ImageButton
                        android:id="@+id/item_get_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:contentDescription="@string/get_location"
                        app:srcCompat="@android:drawable/ic_menu_mylocation" />
                </LinearLayout>

                <TextView
                    android:id="@+id/postal_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/saveItemButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{isNewItem ? @string/create_item : @string/edit}"
                        tools:text="@string/create_item" />
                </LinearLayout>

...
