<resources>
    <string name="app_name">Sharingang</string>
    <string name="new_item">New Item</string>
    <string name="description">Description</string>
    <string name="create_item">Create Item</string>
    <string name="go_to_map">Go to Map</string>
    <string name="edit">Edit</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
...
    <string name="clear_search_button">Clear search</string>
    <string name="share">Share</string>
    <string name="txt_user_profile_picture">User Profile Picture</string>
    <string name="add_wishlist">Add to Wishlist</string>
    <string name="remove_wishlist">Remove from Wishlist</string>
    <string name="wishlist_menu_title">Wish List</string>
    <string name="enter_address">Enter Address</string>
    <string name="item">Item</string>
    <string name="userNotLoggedInInfo">You need to be logged in to view your User Profile.</string>
    <string name="userNotLoggedInCreateItem">You need to be logged in to create an item.</string>
    <string name="userNotLoggedInWishlist">You need to be logged in to access the wishlist.</string>
    <string name="default_rating">No Ratings</string>
    <string name="apply_rating">Rate</string>
...
    </string-array>
    <string name="sort">Sort</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string-array name="order_ascending_descending">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="chats_title">Chats</string>
    <string name="username">Username</string>
    <string name="profilePicture">profilePicture</string>
    <string name="logged_out_user_info_chat">You need to be logged in to chat.</string>
    <string name="messageHint">Your message…</string>
...
