...

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/detailedItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/display_quantity(item.quantity)}"
                android:textSize="18sp" />

        </LinearLayout>
...
