<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="description"
            type="String" />

        <variable
            name="price"
            type="String" />

        <variable
            name="latitude"
            type="String" />

        <variable
            name="longitude"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newItemPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_item"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/new_item_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="2"
                android:contentDescription="@string/item_image_description"
                android:src="@drawable/ic_baseline_image_24" />

            <ImageButton
                android:id="@+id/new_item_take_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/item_image_description"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <EditText
            android:id="@+id/editItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={title}" />

        <EditText
            android:id="@+id/editItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:singleLine="false"
            android:text="@={description}"
            tools:ignore="LabelFor" />


        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/categories" />

        <EditText
            android:id="@+id/editItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="yes"
            android:ems="10"
            android:hint="@string/default_price"
            android:importantForAutofill="yes"
            android:inputType="numberDecimal"
            android:text="@={price}" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.fragment.app.FragmentContainerView>

        <TextView
            android:id="@+id/postal_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/new_item_get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_location" />

        <Button
            android:id="@+id/createItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_item" />

    </LinearLayout>
</layout>